--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <b>-----------------------------------------------------------------------------------------------------------------------</b>
 <br>
 <h3>Register form</h3>
-<form action="test2Image.html">
+<form action="index2.html">
     <input type="text" placeholder="please enter your firstName"><br>
     <input type="text" placeholder="please enter your lastName"><br>
     <input type="email" placeholder="Email"><br>
