--- a/html_demo/index.html
+++ b/html_demo/index.html
@@ -26,7 +26,9 @@
         <a href="https://www.w3schools.com/html/html_intro.asp" target="_blank">HTML intro(w3schools)</a>
     </li>
     <li>
-        <a href="mailto:amiri.ashkan.d@gmail.com" target="_blank">Email Me</a>
+        <a href="mailto:amiri.ashkan.d@gmail.com" target="_blank">Email Me</a><br>
+        
+        <a href="https://webacademy.se/" target="_blank">webcademy</a>
     </li>
 </ul>
 <h2 id="Apple">Apple webPage</h2>
